@@ -11,7 +11,8 @@ pwdx: buffer overflow fixed -- thanks Ulf Harnhammar
 procps.spec needed a slash -- thanks Jesse Brandeburg
 w: stale utmp entries snuck in via uninitialized var -- thanks Robert A Basch
 pgrep/pkill: fix some realloc-related crashes       #353894
-pgrep/pkill: g is criteria (secret PLD Linux patch)
+pgrep/pkill: g is criteria (PLD Linux, patch found in locked filing cabinet)
+sysctl: use - for stdin (PLD Linux: beware of the leopard)
 
 procps-3.2.5 --> procps-3.2.6
 
